--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,29 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: arial;
 }
 
 a {
   color: #00B7FF;
 }
+
+ul.success li, ul.info li,ul.err li{
+	margin:20px 0 20px 0 ;
+	padding: 15px;
+	border: :15px solid transparent;
+	border-radius: 5px;
+	list-style: none;
+}
+
+ul.success li{
+	color: #3c763d;
+	background: #dff0d8;
+	border-color: #d6e9c6;
+}
+
+ul.info li{
+	color: #31708f;
+	background: #d9edf7;
+	border-color: #bce8f1;
+}
+
