--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,18 +23,21 @@ html
 					ul.nav.navbar-nav
 						li(class=(title === 'Members' ? 'active' :''))
 							a(href='/') Members
-						|             
-						li(class=(title === 'Register' ? 'active' :''))
-							a(href='/users/register') Register
-						|             
-						li(class=(title === 'Login' ? 'active' :''))
-							a(href='/users/login') Log In
+						| 
+						if !user            
+							li(class=(title === 'Register' ? 'active' :''))
+								a(href='/users/register') Register
+							|             
+							li(class=(title === 'Login' ? 'active' :''))
+								a(href='/users/login') Log In
 					ul.nav.navbar-nav.navbar-right
-						li
-							a(href='/users/logout') Log Out
+						if user
+							li
+								a(href='/users/logout') Log Out
 				// /.nav-collapse
 		|     
 		.container
+			!= messages()
 			block content
 
 		// javascript files If you include em inside the body they will work too.
